--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </nav>
     <div class="content">
-        <h1>Web Design & <br> <span>Development</span><br>Course</h1>
+        <h1>Latest Design & <br> <span>Fashion</span><br>Hub</h1>
         <p class="para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br>
              Omnis eos quibusdam quia totam maxime rem fugit et vero, <br>
              vel ex tempore molestias libero voluptatibus, <br>
